Archive2/25/6735e6b29a1e3a/output
main.cpp: In function ‘int main()’:
main.cpp:43:5: error: could not convert ‘(const char*)"arf"’ from ‘const char*’ to ‘testa<const char>’
     };
     ^
main.cpp:41:15: warning: unused variable ‘aggregatetest’ [-Wunused-variable]
     aggregate aggregatetest[] = {
               ^
